--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "axios": "^1.6.8",
     "formik": "^2.4.6",
     "react": "^18.3.1",
